--- a/RayshiftTranslateFGO.Android/Properties/AndroidManifest.xml
+++ b/RayshiftTranslateFGO.Android/Properties/AndroidManifest.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="106" android:versionName="1.06" package="io.rayshift.translatefgo" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="28" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="200" android:versionName="2.0.0" package="io.rayshift.translatefgo" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-	<application android:roundIcon="@mipmap/ic_launcher_round" android:label="Translate Fate/GO" android:icon="@mipmap/ic_launcher">
+	<application android:largeHeap="true" android:roundIcon="@mipmap/ic_launcher_round" android:label="Translate Fate/GO" android:icon="@mipmap/ic_launcher" android:requestLegacyExternalStorage="true">
 		<receiver android:name="com.google.firebase.iid.FirebaseInstanceIdInternalReceiver" android:exported="false" />
 		<receiver android:name="com.google.firebase.iid.FirebaseInstanceIdReceiver" android:exported="true" android:permission="com.google.android.c2dm.permission.SEND">
 			<intent-filter>
@@ -18,4 +18,8 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+	<uses-permission android:name="android.permission.WRITE_MEDIA_STORAGE" />
+	<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+	<uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
 </manifest>
