--- a/RayshiftTranslateFGO/RayshiftTranslateFGO.csproj
+++ b/RayshiftTranslateFGO/RayshiftTranslateFGO.csproj
@@ -68,5 +68,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Update="Views\AnnouncementPage.xaml.cs">
+      <DependentUpon>AnnouncementPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
