--- a/ShizukuX/ShizukuX.API/ShizukuX.API.csproj
+++ b/ShizukuX/ShizukuX.API/ShizukuX.API.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="Jars\api-debug.aar" />
+    <LibraryProjectZip Include="Jars\api-release.aar" />
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
