--- a/RayshiftTranslateFGO/RayshiftTranslateFGO.csproj
+++ b/RayshiftTranslateFGO/RayshiftTranslateFGO.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
     <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="106.15.0" />
+    <PackageReference Include="Sentry.Xamarin.Forms" Version="2.1.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
   </ItemGroup>
